Read Topic Rout done

--- a/views/topic.html
+++ b/views/topic.html
@@ -14,7 +14,7 @@
 
   <ul>
     {{#allTopics}}
-      <li><a href="/topic/{{id}}">{{title}} - {{body}} - {{vote}} - {{user_id}}</a></li>
+      <li><a href="/topics/{{id}}">{{title}} - {{description}} - {{vote}} - {{user_id}}</a></li>
     {{/allTopics}}
   </ul>
   
