--- a/views/read_topic.html
+++ b/views/read_topic.html
@@ -7,17 +7,39 @@
 <body>
 
   <h1>{{title}}</h1>
-  <p>{{description}}</p>
+ <!--  <p>{{description}}</p> -->
+  <button><a href='/topics'>List all Topics</a></button>
+<!--   <form method="POST" action="/topics/{{id}}?_method=PUT">
+    <input type="text" name="description" value="{{description}}">
 
-  <form method="POST" action="/topics/{{id}}?_method=PUT">
-    <input type="text" name="title" value="{{title}}">
 
     <button type="submit">Update</button>
+  </form> -->
+
+ <!--  <form method="POST" action="/topics/{{id}}?_method=DELETE">
+    <button type="submit">Delete</button>
+  </form>  -->
+
+  <form method="POST" action="/topics/{{id}}?_method=PUT">
+    <p>{{description}}</p>
+    <input type="button" name="vote" value="{{vote}}">
+    <button type="submit">Vote</button>
   </form>
 
-  <form method="POST" action="/topics/{{id}}?_method=DELETE">
-    <button type="submit">Delete</button>
+  <form method="POST" action="/comments/comment">
+    <label>
+      Leave a comment:
+      <input type="text" name="comment" value="{{comment}}">
+      <button type="submit">Submit</button>
+    </label>
+
   </form>
+
+
+  <!--<form method="POST" action="/topics/{{id}}?_method=DELETE">
+    <button type="submit">Delete</button>
+  </form>-->
+
   
 </body>
 </html>
