Some minor css setup with express.static

--- a/views/new_topic.html
+++ b/views/new_topic.html
@@ -2,11 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+   <link rel="stylesheet" type="text/css" href="/css/main.css">
   <title>Create New Topic</title>
 </head>
 <body>
 
-    <h1>Create New Topic</h1>
+    <ul>
+      <li><a href="/">Home Page</a></li>
+      <li><a href="/topics">Topics</a></li>
+      <!-- <li><a href="#">Worst Poems</a></li> -->
+    </ul>
+
+    <h2>Create New Topic</h2>
 
   <form action="/topics/new" method="POST">
     <label>
