--- a/views/username.html
+++ b/views/username.html
@@ -2,10 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="/css/main.css">
   <title>Username</title>
 </head>
 <body>
-  <a href='/'>Home Page</a>
+  
+    <ul>
+      <li><a href="/">Home Page</a></li>
+      <li><a href="/topics">Topics</a></li>
+      <!-- <li><a href="#">Worst Poems</a></li> -->
+    </ul>
 
   <ul>
     {{#allUsernames}}
