--- a/views/index.html
+++ b/views/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="/css/main.css">
   <title>Travel Forum</title>
+
 </head>
 <body>
 
