--- a/views/read_topic.html
+++ b/views/read_topic.html
@@ -27,7 +27,10 @@
   </form>  -->
 
   <form method="POST" action="/topics/{{id}}?_method=PUT">
+
     <p>{{description}}</p>
+    <p>{{comment}}</p>
+    
     <input type="button" name="vote" value="{{vote}}">
     <button type="submit">Vote</button>
   </form><br />
