Working topic comments

--- a/views/new_topic.html
+++ b/views/new_topic.html
@@ -24,6 +24,10 @@
       Description:
       <input type="text" name="description" />
     </label>
+    <label>
+      Your username:
+      <input type="text" name="name" />
+    </label>
     <button>Submit</button>
   </form>
 
