--- a/views/read_topic.html
+++ b/views/read_topic.html
@@ -14,13 +14,6 @@
     </ul>
 
   <h2>{{title}}</h2>
- <!--  <p>{{description}}</p> -->
-<!--   <form method="POST" action="/topics/{{id}}?_method=PUT">
-    <input type="text" name="description" value="{{description}}">
-
-
-    <button type="submit">Update</button>
-  </form> -->
 
  <!--  <form method="POST" action="/topics/{{id}}?_method=DELETE">
     <button type="submit">Delete</button>
@@ -43,7 +36,8 @@
       <button type="submit">Submit</button><br />
     </label>
     {{#comments}}
-     <li>{{comment}}</li><br />
+     <li>{{comment}}</li>
+     <li>{{location}}</li><br />
     {{/comments}}
 
   </form>
