Create HTML Tables

--- a/views/index.html
+++ b/views/index.html
@@ -8,8 +8,12 @@
 </head>
 <body>
 
+    <header> <!-- Defining the header section of the page with the appropriate tag -->
+
     <h1>Welcome to the Travel Forum</h1>
     <h3>To continue to the Travel page please sign up</h3>
+
+    </header>
 
   <form action="/usernames/create" method="POST">
     <label>
