--- a/views/css/main.css
+++ b/views/css/main.css
@@ -3,10 +3,11 @@ body {
     /*background: url()*/
 }
 
-h1 {
+h1, h2 {
     color: navy;
     text-align: center; 
 }
+
 
 a:link {
     text-decoration: none;
@@ -22,3 +23,4 @@ li {
   padding: 0px 10px 0px 10px;
   
 }
+
