--- a/views/new_topic.html
+++ b/views/new_topic.html
@@ -15,7 +15,41 @@
 
     <h2>Create New Topic</h2>
 
-  <form action="/topics/new" method="POST">
+<table width="400" border="0" align="center" cellpadding="0" cellspacing="1" bgcolor="#CCCCCC">
+<tr>
+<form method="post" action="/topics/new">
+<td>
+<table width="100%" border="0" cellpadding="3" cellspacing="1" bgcolor="#FFFFFF">
+<tr>
+<td colspan="3" bgcolor="#E6E6E6"><strong>Create New Topic</strong> </td>
+</tr>
+<tr>
+<td width="14%"><strong>Topic</strong></td>
+<td width="2%">:</td>
+<td width="84%"><input name="title" type="text" size="50" /></td>
+</tr>
+<tr>
+<td valign="top"><strong>Descripton</strong></td>
+<td valign="top">:</td>
+<td><textarea name="description" cols="50" rows="3"></textarea></td>
+</tr>
+<tr>
+<td><strong>Username</strong></td>
+<td>:</td>
+<td><input name="name" type="text" size="50" /></td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td><input type="submit" name="Submit" value="Submit" /> <input type="reset" name="Submit2" value="Reset" /></td>
+</tr>
+</table>
+</td>
+</form>
+</tr>
+</table>
+
+ <!--  <form action="/topics/new" method="POST">
     <label>
       Topic Title:
       <input type="text" name="title" />
@@ -30,6 +64,6 @@
     </label>
     <button>Submit</button>
   </form>
-
+ -->
 </body>
 </html>
