--- a/views/topic.html
+++ b/views/topic.html
@@ -12,18 +12,45 @@
     <ul>
       <li><a href="/">Home Page</a></li>
       <li><a href="/topics">Topics</a></li>
-      <!-- <li><a href="#">Worst Poems</a></li> -->
     </ul>
 
   <!-- <button><a href='/'>Home Page</a></button><br /> -->
 
-  <button><a href='/topics/new'>CREATE TOPIC</a></button>
+<table width="90%" border="0" align="center" cellpadding="3" cellspacing="1" bgcolor="#CCCCCC">
+<tr>
+<td width="6%" align="center" bgcolor="#E6E6E6"><strong>#</strong></td>
+<td width="53%" align="center" bgcolor="#E6E6E6"><strong>Topic</strong></td>
+<td width="15%" align="center" bgcolor="#E6E6E6"><strong>Votes</strong></td>
+<td width="13%" align="center" bgcolor="#E6E6E6"><strong>Reviews</strong></td>
+<td width="13%" align="center" bgcolor="#E6E6E6"><strong>Author</strong></td>
+</tr>
 
   <ul>
     {{#allTopics}}
-      <li><a href="/topics/{{id}}">{{title}} - {{vote}} - {{user_id}}</a></li>
+    <tr> 
+    <td align="center" bgcolor="#FFFFFF">{{id}}</td>
+    <td bgcolor="#FFFFFF"><a href="/topics/{{id}}">{{title}}</a><BR></td>
+    <td align="center" bgcolor="#FFFFFF">{{vote}}</td>
+    <td align="center" bgcolor="#FFFFFF">{{reviews}}</td>
+    <td align="center" bgcolor="#FFFFFF">{{user_id}}</td>
+    </tr>
     {{/allTopics}}
   </ul>
+
+<tr>
+<td colspan="5" align="right" bgcolor="#E6E6E6"><a href="/topics/new"><strong>Create New Topic</strong> </a></td>
+</tr>
+</table>
+
+
+
+  <!-- <button><a href='/topics/new'>CREATE TOPIC</a></button> -->
+
+  <!-- <ul>
+    {{#allTopics}}
+      <li><a href="/topics/{{id}}">{{title}} - {{vote}} - {{user_id}}</a></li>
+    {{/allTopics}}
+  </ul> -->
   
 </body>
 </html>
