--- a/views/topic.html
+++ b/views/topic.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-  <h1>Travel Forum Topics</h1>
+  <h1>Jake's Forum Topics</h1>
 
     <ul>
       <li><a href="/">Home Page</a></li>
