--- a/views/index.html
+++ b/views/index.html
@@ -10,8 +10,8 @@
 
     <header> <!-- Defining the header section of the page with the appropriate tag -->
 
-    <h1>Welcome to the Travel Forum</h1>
-    <h3>To continue to the Travel page please sign up</h3>
+    <h1>Welcome to Jake's Forum</h1>
+    <h3>To continue to Jake's Forum page please sign up</h3>
 
     </header>
 
