--- a/views/topic.html
+++ b/views/topic.html
@@ -20,7 +20,7 @@
 <tr>
 <td width="6%" align="center" bgcolor="#E6E6E6"><strong>#</strong></td>
 <td width="53%" align="center" bgcolor="#E6E6E6"><strong>Topic</strong></td>
-<td width="15%" align="center" bgcolor="#E6E6E6"><strong>Votes</strong></td>
+<td width="15%" align="center" bgcolor="#E6E6E6"><a href="/topics/{{id}}"><strong>Votes</strong></a></td>
 <td width="13%" align="center" bgcolor="#E6E6E6"><strong>Reviews</strong></td>
 <td width="13%" align="center" bgcolor="#E6E6E6"><strong>Author</strong></td>
 </tr>
