some minor changes

--- a/views/read_topic.html
+++ b/views/read_topic.html
@@ -110,7 +110,7 @@
 
 <!-- -------------------------------------------------------------------------- -->
 
-  <!-- <form method="POST" action="/topics/{{id}}?_method=PUT">
+<!--   <form method="POST" action="/topics/{{id}}?_method=PUT">
 
     <p>{{description}}</p>
     
@@ -120,24 +120,24 @@
 
 
   <!-- <form method="POST" action="/topics/{{id}}/comment">
-    <label> -->
+    <label>
       <!-- Leave a comment: <br /> -->
-      <!-- <textarea name="comment" value="{{comment}}"></textarea><br /> -->
-      <!-- <input type="text" name="comment">
+<!--       <textarea name="comment" value="{{comment}}"></textarea><br />
+      <input type="text" name="comment">
       <button type="submit">Submit</button><br />
     </label><br />
     {{#comments}}
      <li>{{comment}}</li> -->
      <!-- <li>{{user}}</li> -->
-     <!-- <li>{{location}}</li><br />
+<!--      <li>{{location}}</li><br />
     {{/comments}}
 
-  </form> -->
+  </form>  -->
 
 
-  <!--<form method="POST" action="/topics/{{id}}?_method=DELETE">
+  <!-- <form method="POST" action="/topics/{{id}}?_method=DELETE">
     <button type="submit">Delete</button>
-  </form>-->
+  </form> -->
 
   
 </body>
