--- a/views/topic.html
+++ b/views/topic.html
@@ -21,7 +21,7 @@
 <td width="6%" align="center" bgcolor="#E6E6E6"><strong>#</strong></td>
 <td width="53%" align="center" bgcolor="#E6E6E6"><strong>Topic</strong></td>
 <td width="15%" align="center" bgcolor="#E6E6E6"><a href="/topics/{{id}}"><strong>Votes</strong></a></td>
-<td width="13%" align="center" bgcolor="#E6E6E6"><strong>Reviews</strong></td>
+<td width="13%" align="center" bgcolor="#E6E6E6"><strong>Comments</strong></td>
 <td width="13%" align="center" bgcolor="#E6E6E6"><strong>Author</strong></td>
 </tr>
 
@@ -31,7 +31,7 @@
     <td align="center" bgcolor="#FFFFFF">{{id}}</td>
     <td bgcolor="#FFFFFF"><a href="/topics/{{id}}">{{title}}</a><BR></td>
     <td align="center" bgcolor="#FFFFFF">{{vote}}</td>
-    <td align="center" bgcolor="#FFFFFF">{{reviews}}</td>
+    <td align="center" bgcolor="#FFFFFF">{{comments_number}}</td>
     <td align="center" bgcolor="#FFFFFF">{{user_id}}</td>
     </tr>
     {{/allTopics}}
