--- a/views/new_topic.html
+++ b/views/new_topic.html
@@ -8,14 +8,14 @@
 <body>
 
     <ul>
-      <li><a href="/">Home Page</a></li>
-      <li><a href="/topics">Topics</a></li>
+      <li><button><a href="/">Sign Up</a></button></li>
+      <li><button><a href="/topics">Home</a></button></li>
       <!-- <li><a href="#">Worst Poems</a></li> -->
     </ul>
 
-    <h2>Create New Topic</h2>
+    <!-- <h2>Create New Topic</h2> -->
 
-<table width="400" border="0" align="center" cellpadding="0" cellspacing="1" bgcolor="#CCCCCC">
+<table width="400" border="0" align="center" cellpadding="4" cellspacing="1" bgcolor="#CCCCCC">
 <tr>
 <form method="post" action="/topics/new">
 <td>
@@ -36,7 +36,7 @@
 <tr>
 <td><strong>Username</strong></td>
 <td>:</td>
-<td><input name="name" type="text" size="50" /></td>
+<td><input name="name" type="text" size="60"/></td>
 </tr>
 <tr>
 <td>&nbsp;</td>
