--- a/views/topic.html
+++ b/views/topic.html
@@ -7,16 +7,16 @@
 </head>
 <body>
 
-  <h1>Jake's Forum Topics</h1>
+  <!-- <h1>Jake's Forum Topics</h1> -->
 
     <ul>
-      <li><a href="/">Home Page</a></li>
-      <li><a href="/topics">Topics</a></li>
+      <li><button><a href="/">Sign Up</a></button></li>
+      <li><button><a href="/topics">Home</a></button></li>
     </ul>
 
   <!-- <button><a href='/'>Home Page</a></button><br /> -->
 
-<table width="90%" border="0" align="center" cellpadding="3" cellspacing="1" bgcolor="#CCCCCC">
+<table width="90%" border="0" align="center" cellpadding="7" cellspacing="1" bgcolor="#999">
 <tr>
 <td width="6%" align="center" bgcolor="#E6E6E6"><strong>#</strong></td>
 <td width="53%" align="center" bgcolor="#E6E6E6"><strong>Topic</strong></td>
